<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/recipe_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/colorAccent"
                android:contentDescription="@string/thumbnail_image"
                android:contextClickable="false"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/recipe_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/take_photo"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name_label"
                android:textColor="@color/colorPrimaryLight" />

            <EditText
                android:id="@+id/recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name_hint"
                android:inputType="text"
                android:textColorHint="@color/colorPrimaryLight"
                android:autofillHints="" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|end">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/custom_boarder"
                    android:orientation="vertical"
                    android:padding="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Spinner
                        android:id="@+id/spinner_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorSecondaryPrimary"
                        android:gravity="center"
                        android:padding="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/recipe_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center"
                android:hint="@string/recipe_date_hint"
                android:textColor="@color/colorBackground"
                android:textColorHint="@color/colorBackground" />

            <Button
                android:id="@+id/invite_guest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/invite_dinner_guest_hint"
                android:textColor="@color/colorBackground"
                android:textColorHint="@color/colorBackground" />

            <Button
                android:id="@+id/recipe_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/send_recipe_hint"
                android:textColor="@color/colorBackground"
                android:textColorHint="@color/colorBackground" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_ingredients_label"
                android:textColor="@color/colorPrimaryLight" />

            <EditText
                android:id="@+id/recipe_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_ingredients_hint"
                android:inputType="textMultiLine"
                android:textColorHint="@color/colorPrimaryLight"
                android:autofillHints="" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_instructions_label"
                android:textColor="@color/colorPrimaryLight" />

            <EditText
                android:id="@+id/recipe_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_instructions_hint"
                android:inputType="textMultiLine"
                android:textColorHint="@color/colorPrimaryLight"
                android:autofillHints="" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>